unix/lang/tests/error/explicit_error.yab
#expect# Currently the wrong line is displayed
error "explicit error"
